# hl_kid_public

./: CMakeLists.txt  README.md  package.xml
KidSize/: README.md  buildinfos.c  main.cpp
Motion/moves/: Approach.cpp  Approach.h  ApproachMove.cpp  ApproachMove.h  ApproachPotential.cpp  ApproachPotential.h  ArucoCalibration.cpp  AutonomousPlaying.cpp  GoalKeeper.cpp  GoalKeeper.cpp.back  GoalKeeper.h  GoalKick.cpp  GoalKick.hpp  Head.cpp  Head.h  Kick.cpp  Kick.h  KickController.cpp  KickController.h  KickPhilipp.cpp  LateralStep.cpp  LateralStep.hpp  LearnedApproach.cpp  LearnedApproach.h  LogMachine.cpp  MDPKickController.cpp  MDPKickController.h  Move.cpp  Move.h  Moves.cpp  Penalty.cpp  PenaltyKickController.cpp  Placer.cpp  Placer.h  Playing.cpp  Playing.h  PushRecovery3.cpp  QKickController.cpp  QKickController.h  ReactiveKicker.cpp  (+13 more)
Motion/scheduler/: Helpers.cpp  MoveScheduler.cpp
Motion/services/: CaptainService.cpp  CaptainService.h  DecisionService.cpp  DecisionService.h  LocalisationService.cpp  LocalisationService.h  MaintenanceService.cpp  MaintenanceService.h  ModelService.cpp  ModelService.h  RefereeService.cpp  Service.h  StrategyService.cpp  StrategyService.h  TeamPlayService.cpp  TeamPlayService.h
Motion/strategy/: CorridorProfile.cpp  CorridorProfile.hpp  KickQLearning.cpp  KickStrategy.cpp  PlacementOptimizer.h  main.cpp
Vision/: manual.org
Vision/Application/: Application.cpp  Application.hpp
Vision/Binding/: LocalisationBinding.cpp  LocalisationBinding.hpp  Robocup.cpp  Robocup.hpp
Vision/CameraState/: CameraState.cpp  CameraState.hpp
Vision/Field/: Field.cpp  Field.hpp
Vision/Filters/: DebugLevel.cpp  DebugLevel.hpp  Filter.cpp  Filter.hpp  FilterFactory.hpp  Pipeline.cpp  Pipeline.hpp
Vision/Filters/Ball/: BallByDNN.cpp  BallByII.cpp  BallProvider.cpp  BallProvider.hpp
Vision/Filters/Basics/: Blur.cpp  Integral.cpp  Undistort.cpp
Vision/Filters/Colors/: ColorConverter.cpp
Vision/Filters/Custom/: FieldBorder.cpp  FieldBorderData.cpp
Vision/Filters/Features/: TagsDetector.cpp  VisualCompass.cpp
Vision/FrameSource/: FrameSrc.hpp  ImageSequence.cpp
Vision/Hough/: Hough.cpp  Hough.hpp
Vision/Localisation/: RadarFilterPoint.cpp  RadarFilterPoint.hpp
Vision/Tags/: CalibrationSet.cpp  CalibrationSet.hpp  TagsCollection.hpp  TagsSheet.cpp
Vision/Utils/: BlobUtils.cpp  Drawing.cpp  Drawing.hpp  HomogeneousTransform.cpp  HomogeneousTransform.hpp  ImageLogger.cpp  ImageLogger.h  Interface.cpp  Interface.h
(+34 files in other folders)
