<?xml version="1.0"?>
<package>
  <name>kid_size</name>
  <version>0.0.0</version>
  <description>
    The main repository for humanoid kid size league at RoboCup
  </description>

  <maintainer email="qrouxel@labri.fr">Quentin Rouxel</maintainer>
  <maintainer email="rfabre@labri.fr">Rémi Fabre</maintainer>
  <maintainer email="gpassault@labri.fr">Grégoire Passault</maintainer>
  <maintainer email="ly@labri.fr">Olivier Ly</maintainer>
  <maintainer email="snguyen@labri.fr">Steve N'guyen</maintainer>
  <maintainer email="lhofer@labri.fr">Ludovic Hofer</maintainer>

  <license>MIT</license>

  <author email="qrouxel@labri.fr">Quentin Rouxel</author>
  <author email="rfabre@labri.fr">Rémi Fabre</author>
  <author email="gpassault@labri.fr">Grégoire Passault</author>
  <author email="ly@labri.fr">Olivier Ly</author>
  <author email="snguyen@labri.fr">Steve N'guyen</author>
  <author email="lhofer@labri.fr">Ludovic Hofer</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>RhAL</build_depend> <!-- StarkitRobots/rhal -->
  <build_depend>model</build_depend> <!-- StarkitRobots/model -->
  <build_depend>robocup_referee</build_depend> <!-- StarkitRobots/robocupreferee -->
  <build_depend>starkit_graphs</build_depend> <!-- StarkitRobots/graphs -->
  <build_depend>starkit_unsorted</build_depend> <!-- StarkitRobots/unsorted -->
  <build_depend>starkit_random</build_depend> <!-- StarkitRobots/random -->
  <build_depend>starkit_team_play</build_depend> <!-- StarkitRobots/teamplay -->
  <build_depend>starkit_model_learning</build_depend> <!-- StarkitRobots/model_learning -->
  <build_depend>csa_mdp_experiments</build_depend> <!-- StarkitRobots/csa_mdp_experiments.git -->
  <build_depend>tiny-dnn</build_depend> <!-- StarkitRobots/tiny-dnn.git -->
  <build_depend>aruco</build_depend> <!-- StarkitRobots/aruco.git -->
  <build_depend>tclap</build_depend> <!-- StarkitRobots/tclap -->

  <run_depend>RhAL</run_depend>
  <run_depend>model</run_depend>
  <run_depend>robocup_referee</run_depend>
  <run_depend>starkit_graphs</run_depend>
  <run_depend>starkit_unsorted</run_depend>
  <run_depend>starkit_random</run_depend>
  <run_depend>starkit_team_play</run_depend>
  <run_depend>starkit_model_learning</run_depend>
  <run_depend>csa_mdp_experiments</run_depend>
  <run_depend>tiny-dnn</run_depend>
  <run_depend>aruco</run_depend>
  <run_depend>tclap</run_depend>

</package>
